# Voxaudio

./: .gitmodules  CMakeLists.txt  README.md
FmodCore/: FmodCoreEngine.cpp  FmodCoreEngine.hpp  FmodCoreVoxaudio.cpp
FmodStudio/: FmodStudioEngine.cpp  FmodStudioEngine.hpp  FmodStudioVoxaudio.cpp
Global/: FileDialogs.cpp  FileDialogs.hpp
include/: Voxaudio.hpp
include/Voxymore/Audio/: Sound.hpp
lib/fmod/: CMakeLists.txt
src/FmodCore/: FmodCoreEngine.cpp  FmodCoreEngine.hpp  FmodCoreSound.cpp  FmodCoreSound.hpp  FmodCoreVoxaudio.cpp  Voxaudio.cpp
src/FmodStudio/: FmodStudioEngine.cpp  FmodStudioEngine.hpp  Voxaudio.cpp
